# ctxmax

./: .gitignore  README.md  pyproject.toml
benchmarks/: benchmark.py  benchmark_compression.py
examples/: cli_demo.py
src/conmax/: __init__.py  chat.py  compressor.py  provider.py  tokenizer.py
src/ctxmax/: __init__.py  chat.py  provider.py
tests/: test_compressor.py
