[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctxmax"
version = "0.1.0"
description = "Context maximizer: dynamic just-in-time chat history compression for LLMs"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0", "tiktoken>=0.7.0"]
cli = ["rich>=13.0.0"]
dev = ["pytest>=8.0.0"]
all = ["anthropic>=0.40.0", "openai>=1.50.0", "tiktoken>=0.7.0", "rich>=13.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/ctxmax"]
